--- a/jmri/layout/package.html
+++ b/jmri/layout/package.html
@@ -19,7 +19,7 @@ Create and manage a tree of the JMRI objects representing a layout.
 For overviews, tutorials, examples, guides, and tool documentation, please see:
 <ul>
   <li><a href="http://jmri.sourceforge.net/">JMRI project overview page</a>
-  <li><a href="http://jmri.sourceforge.net/Technical">JMRI project technical info</a>
+  <li><a href="http://jmri.sourceforge.net/help/en/html/doc/Technical/index.shtml">JMRI project technical info</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
